--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <div class="text">
     <div>
-        <h1>Reliable, efficient delivery</h1>
-        <h1>Powered by Technology</h1>
+        <h1 class="grey">Reliable, efficient delivery</h1>
+        <h1 class="dark">Powered by Technology</h1>
     </div>
     <div>
-        <span>Our Artificial Intelligence powered tools use millions of project data  <br>points to ensure that your project is successful</span>
+        <span class="text2">Our Artificial Intelligence powered tools use millions of project data  <br>points to ensure that your project is successful</span>
     </div>
     </div>
     <div class="conteiner">
     <div class="small_conteiner">
         <div class="insidediv">
             <h1 class="heading">Supervisor</h1>
-            <span class="paragraph">Monitors activity to identify project  <br>roadblocks</span>
+            <p class="paragraph"> Monitors activity to identify project  <br>roadblocks</p> 
             <div>
                 <img src="./photo/030-search.png" alt="" class="photo">
             </div>
@@ -30,7 +30,7 @@
         <div class="middiv">
             <div>
                 <h1 class="heading2">Team Builder</h1>
-                <span class="paragraph2"> Scans our talent network to create the  <br>optimal team for your project</span>
+                <p class="paragraph2"> Scans our talent network to create the  <br>optimal team for your project</p> 
                 <div>
                     <img src="./photo/002-homepage.png" alt="" class="photo2">
                 </div>
@@ -40,7 +40,7 @@
         <div class="middiv2">
             <div>
                 <h1 class="heading3">Karma</h1>
-                <span class="paragraph3"> Regularly evaluates our talent to ensure <br> quality</span>
+                <p class="paragraph3"> Regularly evaluates our talent to ensure <br> quality</p> 
                 <div>
                     <img src="./photo/009-idea.png" alt="" class="photo3">
                 </div>
@@ -51,7 +51,7 @@
     <div class="small_conteiner2">
         <div>
             <h1 class="heading4">Calculator</h1>
-            <span class="paragraph4">Uses data from past projects to provide <br>better delivery estimates</span>
+            <p class="paragraph4"</p> Uses data from past projects to provide <br>better delivery estimates</p> 
             <div>
                 <img src="./photo/045-software.png" alt="" class="photo4">
             </div>
